--- a/API/drive/vids/Building A Simple App That Can Access Google Drive/AngularApp/src/app/template.component.html
+++ b/API/drive/vids/Building A Simple App That Can Access Google Drive/AngularApp/src/app/template.component.html
@@ -203,6 +203,7 @@
         </ng-template>  
         <ng-template #pictureBlock1  >    
             <button #myVal
+            appUpload  [upload]  = "ryber.appAvailble( a.extras[2][bb], 'appUpload')" 
             appSignout  [signOut]  = "ryber.appAvailble( a.extras[2][bb], 'appSignout')" 
             appPlayground  [playground]  = "ryber.appAvailble( a.extras[2][bb], 'appPlayground')" 
             appPrintFiles  [printFiles]  = "ryber.appAvailble( a.extras[2][bb], 'appPrintFiles')"
