--- a/API/bigquery/AngularApp/src/app/template.component.html
+++ b/API/bigquery/AngularApp/src/app/template.component.html
@@ -203,20 +203,7 @@
         </ng-template>
         <ng-template #pictureBlock1  >
             <button #myVal
-                appLock  [lock]  = "ryber.appAvailble( a.extras[2][bb], 'appLock')"
-                appShortcut  [shortcut]  = "ryber.appAvailble( a.extras[2][bb], 'appShortcut')"
-                appProperties  [properties]  = "ryber.appAvailble( a.extras[2][bb], 'appProperties')"
-                appComment  [comment]  = "ryber.appAvailble( a.extras[2][bb], 'appComment')"
-                appAdf  [adf]  = "ryber.appAvailble( a.extras[2][bb], 'appAdf')"
-                appShare  [share]  = "ryber.appAvailble( a.extras[2][bb], 'appShare')"
-                appFields  [fields]  = "ryber.appAvailble( a.extras[2][bb], 'appFields')"
-                appSearch  [search]  = "ryber.appAvailble( a.extras[2][bb], 'appSearch')"
-                appDownload  [download]  = "ryber.appAvailble( a.extras[2][bb], 'appDownload')"
-                appFolders  [folders]  = "ryber.appAvailble( a.extras[2][bb], 'appFolders')"
-                appUpload  [upload]  = "ryber.appAvailble( a.extras[2][bb], 'appUpload')"
-                appSignout  [signOut]  = "ryber.appAvailble( a.extras[2][bb], 'appSignout')"
-                appPlayground  [playground]  = "ryber.appAvailble( a.extras[2][bb], 'appPlayground')"
-                appPrintFiles  [printFiles]  = "ryber.appAvailble( a.extras[2][bb], 'appPrintFiles')"
+                appCreate [create] = "ryber.appAvailble( a.extras[2][bb], 'appCreate')"
                 appInputHandle [inputHandle] = "ryber.appAvailble( a.extras[2][bb], 'appInputHandle')"
                 appFormControl [formControl] = "ryber.appAvailble( a.extras[2][bb], 'appFormControl')"
                 appFileHandler [fileHandler] = "ryber.appAvailble( a.extras[2][bb], 'appFileHandler')"
