--- a/API/bigquery/AngularApp/src/app/template.component.html
+++ b/API/bigquery/AngularApp/src/app/template.component.html
@@ -268,6 +268,7 @@
                 class="ag-theme-blue"
                 [rowData]="a.extras[2][bb].appAgGrid.rowData"
                 [columnDefs]="a.extras[2][bb].appAgGrid.columnDefs"
+                [defaultColDef]="a.extras[2][bb].appAgGrid.defaultColDef"
                 >
                 </ag-grid-angular>
 
