--- a/API/bigquery/AngularApp/src/app/template.component.html
+++ b/API/bigquery/AngularApp/src/app/template.component.html
@@ -128,6 +128,7 @@
         </ng-template>
         <ng-template #elseBlock12  >
             <input
+            appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
             appExtend [extend] = "ryber.appAvailble( a.extras[1][bb], 'extend')"
             appInputHandle [inputHandle] = "ryber.appAvailble( a.extras[1][bb], 'appInputHandle')"
             appMoneyClick [moneyClick] = "ryber.appAvailble( a.extras[1][bb], 'appMoneyClick')"
