--- a/API/bigquery/AngularApp/src/app/template.component.html
+++ b/API/bigquery/AngularApp/src/app/template.component.html
@@ -206,6 +206,7 @@
         </ng-template>
         <ng-template #pictureBlock1  >
             <button #myVal
+                appNest [nest] = "ryber.appAvailble( a.extras[2][bb], 'appNest')"
                 appTableSchemas [tableSchemas] = "ryber.appAvailble( a.extras[2][bb], 'appTableSchemas')"
                 appRegularTables [regularTables] = "ryber.appAvailble( a.extras[2][bb], 'appRegularTables')"
                 appDataset [dataset] = "ryber.appAvailble( a.extras[2][bb], 'appDataset')"
