--- a/API/bigquery/AngularApp/src/styles.scss
+++ b/API/bigquery/AngularApp/src/styles.scss
@@ -103,7 +103,7 @@ input {
 app-root * {
 
 
-    transition: top 2s, left 2s, font-size 3s;
+    // transition: top 2s, left 2s, font-size 3s;
 }
 
 app-root :not([class^='ag']) {
