--- a/API/bigquery/AngularApp/src/styles.scss
+++ b/API/bigquery/AngularApp/src/styles.scss
@@ -1,5 +1,6 @@
 // from config
 $bg-color-1 : rgb(255, 179, 204);
+// $bg-color-1:black;
 
 :root{ // very upset if you have css variables avaible to you update the space and use them instead of keep yr own smh
     --bg-color_1: rgb(255, 179, 204);
