--- a/API/bigquery/AngularApp/src/app/template.component.html
+++ b/API/bigquery/AngularApp/src/app/template.component.html
@@ -209,6 +209,7 @@
         <ng-template #pictureBlock1  >
             <button #myVal
                 appNest [nest] = "ryber.appAvailble( a.extras[2][bb], 'appNest')"
+                appNativeQuery [nativeQuery] = "ryber.appAvailble( a.extras[2][bb], 'appNativeQuery')"
                 appLoading [loading] = "ryber.appAvailble( a.extras[2][bb], 'appLoading')"
                 appTableSchemas [tableSchemas] = "ryber.appAvailble( a.extras[2][bb], 'appTableSchemas')"
                 appRegularTables [regularTables] = "ryber.appAvailble( a.extras[2][bb], 'appRegularTables')"
@@ -266,6 +267,7 @@
         <ng-template #pictureBlock6  >
             <div
             #myVal
+            appAgGrid [agGrid] = "ryber.appAvailble( a.extras[2][bb], 'appAgGrid')"
             appNest [nest] = "ryber.appAvailble( a.extras[2][bb], 'appNest')"
             *ngIf= "a.bool[2][bb] ==='ag-grid'"
             class = {{a.val[2][bb]}}
