--- a/API/bigquery/AngularApp/src/app/template.component.html
+++ b/API/bigquery/AngularApp/src/app/template.component.html
@@ -209,6 +209,7 @@
         <ng-template #pictureBlock1  >
             <button #myVal
                 appNest [nest] = "ryber.appAvailble( a.extras[2][bb], 'appNest')"
+                appClusteredTable [clusteredTable] = "ryber.appAvailble( a.extras[2][bb], 'appClusteredTable')"
                 appPartitionedTable [partitionedTable] = "ryber.appAvailble( a.extras[2][bb], 'appPartitionedTable')"
                 appExternalQuery [externalQuery] = "ryber.appAvailble( a.extras[2][bb], 'appExternalQuery')"
                 appNativeQuery [nativeQuery] = "ryber.appAvailble( a.extras[2][bb], 'appNativeQuery')"
