--- a/API/bigquery/AngularApp/src/app/template.component.html
+++ b/API/bigquery/AngularApp/src/app/template.component.html
@@ -209,6 +209,7 @@
         <ng-template #pictureBlock1  >
             <button #myVal
                 appNest [nest] = "ryber.appAvailble( a.extras[2][bb], 'appNest')"
+                appGIS [gis] = "ryber.appAvailble( a.extras[2][bb], 'appGIS')"
                 appView [view] = "ryber.appAvailble( a.extras[2][bb], 'appView')"
                 appClusteredTable [clusteredTable] = "ryber.appAvailble( a.extras[2][bb], 'appClusteredTable')"
                 appPartitionedTable [partitionedTable] = "ryber.appAvailble( a.extras[2][bb], 'appPartitionedTable')"
