--- a/certifications/google_developer_platform/AngularApp/src/styles.scss
+++ b/certifications/google_developer_platform/AngularApp/src/styles.scss
@@ -96,6 +96,11 @@ input {
     padding: 0px 0px 0px 0px;
 }
 
+// modification for labs
+.incomingPhoto {
+    position: initial !important;
+}
+//
 
 
 /* input::-webkit-calendar-picker-indicator{
